--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,10 @@
             <version>1.16.8</version>
             <scope>provided</scope>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.xebia</groupId>-->
+            <!--<artifactId>jackson-lombok</artifactId>-->
+            <!--<version>1.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
