--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
             <scope>provided</scope>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.xebia</groupId>-->
-            <!--<artifactId>jackson-lombok</artifactId>-->
-            <!--<version>1.1</version>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+            <!--<version>19.0</version>-->
         <!--</dependency>-->
     </dependencies>
 </project>
